# bellhop

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: action.h  bellmsg.h  dbus.h  dbus_message.h  hints.h
src/: action.c  bellmsg.c  dbus.c  dbus_message.c  hints.c  main.c
